<resources>
    <string name="app_name">TiendaMovil</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="register_button">Registrarse</string>
    <string name="username">Nombre de usuario</string>
    <string name="identification">Identificación</string>
    <string name="role">Rol</string>
    <string name="shop_name">Nombre tienda</string>
    <string name="btn_edit_user">Editar</string>
    <string name="btn_delete_user">Eliminar</string>
    <string name="textview">TextView</string>
    <string name="add_product">Agregar</string>
    <string name="perfil">Perfil</string>
    <string name="productos">Productos</string>
    <string name="btn_info">Informacion</string>
    <string name="btn_buy">Comprar</string>
    <string name="txtNameProduct">Nombre de producto </string>
    <string name="txtCantidad">Cantidad de producto </string>
    <string name="txtMarca">Marca de producto </string>
    <string name="txtPrecio">Precio de producto </string>
    <string name="btnModifyPerfil">Modificar Perfil</string>
    <string name="btnProductos">Productos</string>
    <string name="btnGuardarCambios">Guardar Cambios</string>
    <string name="txtAmount">Cantidad</string>
    <string name="btnCancel">Cancelar Compra </string>
    <string name="btnConfirm_Purchase">Confirmar Compra </string>
</resources>